--- a/src/app/components/tamplate/footer/footer.component.html
+++ b/src/app/components/tamplate/footer/footer.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar class="footer">
   <span>
     Desenvolvido com
-    <i class="material-icons red-color v-midle"> favorite </i>
+    <i class="material-icons v-midle" appRed> favorite </i>
     por <strong>Diego Oliveira</strong>
   </span>
 </mat-toolbar>
