--- a/src/app/components/tamplate/header/header.component.html
+++ b/src/app/components/tamplate/header/header.component.html
@@ -10,9 +10,9 @@
   </span>
 
   <span class="title-group">
-    <a>
-      <i class="material-icons"> home </i>
-      Inicio
+    <a routerLink="{{ routeUrl }}">
+      <i class="material-icons"> {{ icon }} </i>
+      {{ title }}
     </a>
   </span>
 </mat-toolbar>
