--- a/src/app/components/product/product-delete/product-delete.component.html
+++ b/src/app/components/product/product-delete/product-delete.component.html
@@ -1,5 +1,5 @@
 <mat-card class="mat-elevation-z0">
-  <mat-card-title>Atualizar Produto</mat-card-title>
+  <mat-card-title>Excluir Produto</mat-card-title>
   <form>
     <mat-form-field>
       <input
